--- a/BuberDinner.Api/BuberDinner.Api.csproj
+++ b/BuberDinner.Api/BuberDinner.Api.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="oneof" Version="3.0.271" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
